# game_of_life

./: .gitignore  CMakeLists.txt  Makefile  README.md  game_life.c  game_life.cc  game_life.h  game_life.hh  graph_wrapp.cc  graph_wrapp.hh  main.c  main.cc
game/: game_life.c  game_life.h
gl_wrapp/: gl_wrapp.c  gl_wrapp.h
graph_wrapp/: graph_wrapp.cc  graph_wrapp.hh
